# scatterxct

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
scatterxct/core/: __init__.py  fft_utils.py  global_control.py
scatterxct/core/discretization/: __init__.py  discretization.py  utils.py
scatterxct/core/propagator/: __init__.py  absorbing_boundary_condition.py  diabatic_propagator.py  math_utils.py  propagator.py  propagator_base.py  td_propagator.py
scatterxct/core/wavefunction/: __init__.py  math_utils.py  scatter_movie.py  wavefunction_data.py  wavepacket.py
scatterxct/dynamics/: dynamics.py  options.py  properties.py  properties_writer.py  run.py  scatter_writer.py  step.py  trajectory_writer.py  utils.py
scatterxct/models/: floquet.py
scatterxct/models/morse/: __init__.py  four_level_morse.py  morse.py
scatterxct/models/nonadiabatic_hamiltonian/: __init__.py  hamiltonian_base.py  math_utils.py  nonadiabatic_hamiltonian.py  quasi_floquet_hamiltonian_base.py  (+1 more)
scatterxct/pulses/: __init__.py  cosine_pulse.py  gaussian.py  morlet.py  morlet_real.py  multipulse.py  pulse_base.py  sine_pulse.py  unit_pulse.py  zero_pulse.py
scripts/: README.md
scripts/creating_project/: scatter_tullyone_t_indep.py  scatter_tullyone_td1.py
scripts/post_processing/: gather_scatter.py  make_moive.py
simulation_scripts/: tullyone.py  utils.py
simulation_scripts/00-tullyone/: 00-test-tullyone.py  01-scatter-tullyone.py  02-scatter-tullyone-statistics.py  utils.py
src/scatterxct/: main.py  mytypes.py  utils.py
(+57 files in other folders)
